--- a/package.json
+++ b/package.json
@@ -47,5 +47,18 @@
   },
   "engines": {
     "node": "14.15.0"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/1459DF/shorturl.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/1459DF/shorturl/issues"
+  },
+  "homepage": "https://github.com/1459DF/shorturl#readme"
 }
