--- a/package.json
+++ b/package.json
@@ -1,64 +1,31 @@
 {
   "name": "tinyurl",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^4.6.0",
-    "ejs": "^3.1.6",
-    "express": "^4.17.2",
-    "mongoose": "^6.2.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^1.6.4",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "shortid": "^2.2.16",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "serStart": "nodemon server.js",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  },
-  "engines": {
-    "node": "14.15.0"
-  },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "version": "1.0.0",
+  "description": "",
   "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "serstart": "nodemon server.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/1459DF/shorturl.git"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/1459DF/shorturl/issues"
   },
-  "homepage": "https://github.com/1459DF/shorturl#readme"
+  "homepage": "https://github.com/1459DF/shorturl#readme",
+  "dependencies": {
+    "ejs": "^3.1.6",
+    "express": "^4.17.2",
+    "mogoose": "0.0.1-security",
+    "mongoose": "^6.2.1",
+    "shortid": "^2.2.16"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
